<resources>

    <!--General-->
    <string name="app_name">ТОЧКА</string>
    <string name="title_activity_maps">ТОЧКА</string>

    <!--Login Screen-->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_login">login</string>
    <string name="prompt_password">•••••••</string>
    <string name="confirm_password">•••••••</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Некорректное имя</string>
    <string name="invalid_password">Некорректный пароль</string>
    <string name="login_failed">"Login failed"</string>
    <string name="next_button">ДАЛЕЕ</string>

    <!--Current Session-->
    <string name="username">Самая пустая</string>

    <!--GoogleMaps Utils-->
    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="location_settings">Location settings</string>

    <!--Main map screen-->
    <string name="main_search">Поиск</string>
    <string name="card_latitude_degree">55</string>
    <string name="card_latitude_minutes">43</string>
    <string name="card_latitude_seconds">42</string>
    <string name="card_longitude_degree">23</string>
    <string name="card_longitude_minutes">12</string>
    <string name="card_longitude_seconds">47</string>
    <string name="card_degrees_symbol">°</string>
    <string name="card_minutes_symbol">\'</string>
    <string name="card_seconds_symbol">\'\'</string>
    <string name="card_latitude_symbol">N</string>
    <string name="card_longitude_symbol">E</string>
    <string name="story">Ахуительная история о том, как две самовлюбленных личности поняли, что как-то необходимо доказать свою илитарность. Для этого им приходитя каждый вечер покупать поднимающие дух напитки и творить!</string>
    <string name="first_tochka_1">Как-то здесь</string>
    <string name="first_tochka_2">пустовато...</string>
    <string name="first_tochka_3">Добавим первую</string>
    <string name="first_tochka_4">точку?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_construct">ConstructActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


</resources>
