<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteBack"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context="social.tochka.android.login.ui.LoginActivity"
    android:focusable="true">

    <ImageButton
        android:id="@+id/eye_pass"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/login_eye_grey_button"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password" />

    <EditText
        android:id="@+id/username"
        android:layout_width="156dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/login_edittext"
        android:cursorVisible="false"
        android:textSize="16sp"
        android:fontFamily="@font/raleway_regular"
        android:hint="@string/prompt_login"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/loginText"
        android:textColorHint="@color/loginHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tochka_icon" />

    <EditText
        android:id="@+id/password"
        android:textSize="20sp"
        android:layout_width="156dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/login_edittext"
        android:fontFamily="@font/raleway_regular"
        android:cursorVisible="false"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/loginText"
        android:textColorHint="@color/loginHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/confirm_password"
        android:textSize="20sp"
        android:layout_width="156dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/login_edittext"
        android:fontFamily="@font/raleway_regular"
        android:cursorVisible="false"
        android:hint="@string/confirm_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/loginText"
        android:textColorHint="@color/loginHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/tochka_icon"
        android:layout_width="187dp"
        android:layout_height="188dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174"
        app:srcCompat="@drawable/login_tohcka" />

    <ImageButton
        android:id="@+id/login"
        android:layout_width="98dp"
        android:layout_height="38dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/login_next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/next_button"
        android:textColor="@color/buttonHint"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/login"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toTopOf="@+id/login"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/eye_conf"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/login_eye_grey_button"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/confirm_password"
        app:layout_constraintTop_toTopOf="@+id/confirm_password" />


</androidx.constraintlayout.widget.ConstraintLayout>